--- a/626.bib
+++ b/626.bib
@@ -1,18 +1,63 @@
-@misc{colantone2018,
+@article{bergh2021,
+  title = {Globalization and Populism in {{Europe}}},
+  author = {Bergh, Andreas and Kärnä, Anders},
+  date = {2021-10-01},
+  journaltitle = {Public Choice},
+  shortjournal = {Public Choice},
+  volume = {189},
+  number = {1},
+  pages = {51--70},
+  doi = {10.1007/s11127-020-00857-8},
+  urldate = {2023-04-05}
+}
+
+@article{bormann2022,
+  title = {Democratic {{Electoral Systems}} around the World, 1946–2020},
+  author = {Bormann, Nils-Christian and Golder, Matt},
+  date = {2022-08-01},
+  journaltitle = {Electoral Studies},
+  shortjournal = {Electoral Studies},
+  volume = {78},
+  pages = {102487},
+  doi = {10.1016/j.electstud.2022.102487},
+  urldate = {2023-05-06}
+}
+
+@dataset{chancel2022,
+  title = {World {{Inequality Database}}},
+  author = {Chancel, Lucas and Piketty, Thomas and Saez, Emmanuel and Zucman, Gabriel},
+  editora = {Duflo, Esther and Banerjee, Abhijit},
+  editoratype = {collaborator},
+  date = {2022},
+  url = {https://wid.world/data/},
+  urldate = {2023-05-05}
+}
+
+@online{colantone2018,
   type = {SSRN Scholarly Paper},
   title = {The {{Economic Determinants}} of the `{{Cultural Backlash}}': {{Globalization}} and {{Attitudes}} in {{Western Europe}}},
   author = {Colantone, Italo and Stanig, Piero},
   date = {2018-10-01},
   number = {3267139},
   location = {{Rochester, NY}},
-  doi = {10.2139/ssrn.3267139}
+  doi = {10.2139/ssrn.3267139},
+  urldate = {2023-02-12},
+  pubstate = {preprint}
 }
 
-@online{flahertyNA,
+@online{flaherty2022,
   title = {Micro-{{Spatial Inequality}} and {{Redistribution}}: {{Evidence}} from the {{California Millionaires Tax Propositions}}},
   author = {Flaherty, Thomas M.},
-  year = {NA},
+  date = {2022},
   url = {https://www.thomasflaherty.com/research}
+}
+
+@dataset{golder2022,
+  title = {{{DES Version}} 4.1},
+  author = {Golder, Matt and Bormann, Nils-Christian},
+  date = {2022},
+  url = {http://mattgolder.com/elections},
+  urldate = {2023-05-05}
 }
 
 @article{guiso2017,
@@ -20,7 +65,6 @@
   author = {Guiso, Luigi and Herrera, Helios and Morelli, Massimo and Sonno, Tommaso},
   date = {2017-02},
   journaltitle = {EIEF Working Papers Series},
-  series = {{{EIEF Working Papers Series}}},
   number = {1703},
   publisher = {{Einaudi Institute for Economics and Finance (EIEF)}},
   url = {https://ideas.repec.org//p/eie/wpaper/1703.html},
@@ -33,7 +77,67 @@
   date = {2022},
   publisher = {{Manifesto Project}},
   doi = {10.25522/MANIFESTO.MPDS.2022A},
+  urldate = {2023-02-25},
   version = {2022a}
+}
+
+@online{malgouyres2017,
+  type = {SSRN Scholarly Paper},
+  title = {Trade {{Shocks}} and {{Far-Right Voting}}: {{Evidence}} from {{French Presidential Elections}}},
+  author = {Malgouyres, Clément},
+  date = {2017-03-01},
+  number = {2942173},
+  location = {{Rochester, NY}},
+  doi = {10.2139/ssrn.2942173},
+  urldate = {2023-05-04},
+  pubstate = {preprint}
+}
+
+@article{robinson1998,
+  title = {Beyond {{Nation-State Paradigms}}: {{Globalization}}, {{Sociology}}, and the {{Challenge}} of {{Transnational Studies}}},
+  author = {Robinson, William I.},
+  date = {1998},
+  journaltitle = {Sociological Forum},
+  volume = {13},
+  number = {4},
+  eprint = {684864},
+  eprinttype = {jstor},
+  pages = {561--594},
+  publisher = {{[Wiley, Springer]}},
+  url = {https://www.jstor.org/stable/684864},
+  urldate = {2023-05-05}
+}
+
+@article{rodrik2018,
+  title = {Populism and the Economics of Globalization},
+  author = {Rodrik, Dani},
+  date = {2018-06},
+  journaltitle = {Journal of International Business Policy},
+  volume = {1},
+  number = {1-2},
+  pages = {12--33},
+  publisher = {{Palgrave Macmillan}},
+  location = {{London, United Kingdom}},
+  doi = {10.1057/s42214-018-0001-4},
+  urldate = {2023-05-04},
+  pagetotal = {12-33}
+}
+
+@online{unitednationsconferenceontradeanddevelopment2022,
+  title = {Global Trade Hits Record High of \$28.5 Trillion in 2021, but Likely to Be Subdued in 2022 | {{UNCTAD}}},
+  author = {{United Nations Conference on Trade {and} Development}},
+  date = {2022},
+  url = {https://unctad.org/news/global-trade-hits-record-high-285-trillion-2021-likely-be-subdued-2022},
+  urldate = {2023-05-04}
+}
+
+@online{unitednationsstatisticsdivision2019,
+  title = {Per Capita {{GDP}} at Current Prices - {{US}} Dollars},
+  author = {{United Nations Statistics Division}},
+  date = {2019},
+  url = {https://data.un.org/Data.aspx?d=SNAAMA&f=grID%3A101%3BcurrID%3AUSD%3BpcFlag%3A1},
+  urldate = {2022-11-14},
+  organization = {{data.un.org}}
 }
 
 @article{walter2021,
@@ -45,5 +149,5 @@
   number = {1},
   pages = {421--442},
   doi = {10.1146/annurev-polisci-041719-102405},
-  annotation = {\_eprint: https://doi.org/10.1146/annurev-polisci-041719-102405}
+  urldate = {2023-01-28}
 }
