--- a/references/Globalization_and_Compensation.bib
+++ b/references/Globalization_and_Compensation.bib
@@ -1,3 +1,15 @@
+@article{autor2020,
+  title = {Importing {{Political Polarization}}? {{The Electoral Consequences}} of {{Rising Trade Exposure}}},
+  author = {Autor, David and Dorn, David and Hanson, Gordon and Majlesi, Kaveh},
+  date = {2020-10},
+  journaltitle = {American Economic Review},
+  volume = {110},
+  number = {10},
+  pages = {3139--3183},
+  doi = {10.1257/aer.20170011},
+  urldate = {2023-05-07}
+}
+
 @article{bergh2021,
   title = {Globalization and Populism in {{Europe}}},
   author = {Bergh, Andreas and Kärnä, Anders},
@@ -21,6 +33,19 @@
   pages = {102487},
   doi = {10.1016/j.electstud.2022.102487},
   urldate = {2023-05-06}
+}
+
+@article{broz2021,
+  title = {Populism in {{Place}}: {{The Economic Geography}} of the {{Globalization Backlash}}},
+  author = {Broz, J. Lawrence and Frieden, Jeffry and Weymouth, Stephen},
+  date = {2021},
+  journaltitle = {International Organization},
+  volume = {75},
+  number = {2},
+  pages = {464--494},
+  publisher = {{Cambridge University Press}},
+  doi = {10.1017/S0020818320000314},
+  urldate = {2023-05-07}
 }
 
 @dataset{chancel2022,
@@ -93,6 +118,30 @@
   pubstate = {preprint}
 }
 
+@article{margalit2011,
+  title = {Costly {{Jobs}}: {{Trade-related Layoffs}}, {{Government Compensation}}, and {{Voting}} in {{U}}.{{S}}. {{Elections}}},
+  author = {Margalit, Yotam},
+  date = {2011-02},
+  journaltitle = {American Political Science Review},
+  volume = {105},
+  number = {1},
+  pages = {166--188},
+  publisher = {{Cambridge University Press}},
+  doi = {10.1017/S000305541000050X},
+  urldate = {2023-05-07}
+}
+
+@article{neely2022,
+  entrysubtype = {newspaper},
+  title = {{{EU}}'s von Der {{Leyen}} Delivers Veiled Warning to {{Italy}}'s Right Wing},
+  author = {Neely, Jason and Kerry, Frances},
+  date = {2022-09-23T13:16:47Z},
+  journaltitle = {Reuters},
+  url = {https://www.reuters.com/world/europe/eus-von-der-leyen-delivers-veiled-warning-italys-right-wing-2022-09-23/},
+  urldate = {2023-05-07},
+  journalsubtitle = {Europe}
+}
+
 @article{robinson1998,
   title = {Beyond {{Nation-State Paradigms}}: {{Globalization}}, {{Sociology}}, and the {{Challenge}} of {{Transnational Studies}}},
   author = {Robinson, William I.},
@@ -150,4 +199,14 @@
   pages = {421--442},
   doi = {10.1146/annurev-polisci-041719-102405},
   urldate = {2023-01-28}
+}
+
+@article{white2021,
+  entrysubtype = {newspaper},
+  title = {Yellen Pushes for Corporate Tax Floor among {{G20}} Countries to Create 'More Level Playing Field'},
+  author = {White, Martha},
+  date = {2021-04-05},
+  journaltitle = {NBC News},
+  url = {https://www.nbcnews.com/business/economy/yellen-pushes-corporate-tax-floor-among-g20-countries-create-more-n1263090},
+  urldate = {2023-05-07}
 }
