--- a/references/Globalization_and_Compensation.bib
+++ b/references/Globalization_and_Compensation.bib
@@ -10,6 +10,16 @@
   urldate = {2023-05-07}
 }
 
+@book{beland2021,
+  title = {The {{Oxford Handbook}} of the {{Welfare State}}},
+  author = {Béland, Daniel and Morgan, Kimberly J. and Obinger, Herbert and Pierson, Christopher},
+  date = {2021},
+  publisher = {{Oxford University Press USA - OSO}},
+  location = {{Oxford, UNITED KINGDOM}},
+  url = {http://ebookcentral.proquest.com/lib/tamucs/detail.action?docID=6783491},
+  urldate = {2023-06-06}
+}
+
 @article{bergh2021,
   title = {Globalization and Populism in {{Europe}}},
   author = {Bergh, Andreas and Kärnä, Anders},
@@ -33,6 +43,21 @@
   pages = {102487},
   doi = {10.1016/j.electstud.2022.102487},
   urldate = {2023-05-06}
+}
+
+@article{bowles1997,
+  title = {Globalization and the {{Welfare State}}: {{Four Hypotheses}} and {{Some Empirical Evidence}}},
+  author = {Bowles, Paul and Wagman, Barnet},
+  date = {1997},
+  journaltitle = {Eastern Economic Journal},
+  volume = {23},
+  number = {3},
+  eprint = {40325785},
+  eprinttype = {jstor},
+  pages = {317--336},
+  publisher = {{Palgrave Macmillan Journals}},
+  url = {https://www.jstor.org/stable/40325785},
+  urldate = {2023-06-02}
 }
 
 @article{broz2021,
@@ -131,6 +156,30 @@
   urldate = {2023-05-07}
 }
 
+@book{milanovic2016,
+  title = {Global Inequality: A New Approach for the Age of Globalization},
+  author = {Milanović, Branko},
+  date = {2016},
+  publisher = {{The Belknap Press of Harvard University Press}},
+  location = {{Cambridge, Massachusetts}},
+  pagetotal = {299}
+}
+
+@article{navarro2004,
+  title = {Is Globalisation Undermining the Welfare State?},
+  author = {Navarro, Vicente and Schmitt, John and Astudillo, Javier},
+  date = {2004},
+  journaltitle = {Cambridge Journal of Economics},
+  volume = {28},
+  number = {1},
+  eprint = {23602178},
+  eprinttype = {jstor},
+  pages = {133--152},
+  publisher = {{Oxford University Press}},
+  url = {https://www.jstor.org/stable/23602178},
+  urldate = {2023-06-02}
+}
+
 @article{neely2022,
   entrysubtype = {newspaper},
   title = {{{EU}}'s von Der {{Leyen}} Delivers Veiled Warning to {{Italy}}'s Right Wing},
@@ -140,6 +189,22 @@
   url = {https://www.reuters.com/world/europe/eus-von-der-leyen-delivers-veiled-warning-italys-right-wing-2022-09-23/},
   urldate = {2023-05-07},
   journalsubtitle = {Europe}
+}
+
+@online{organizationforeconomicco-operationanddevelopment2022b,
+  title = {Social {{Expenditure Database}} ({{SOCX}}) - {{OECD}}},
+  author = {{Organization for Economic Co-operation {and} Development}},
+  date = {2022},
+  url = {https://stats.oecd.org/Index.aspx?datasetcode=SOCX_AGG},
+  urldate = {2023-06-07}
+}
+
+@online{organizationforeconomicco-operationanddevelopment2022c,
+  title = {Employment Database - {{OECD}}},
+  author = {{Organization for Economic Co-operation {and} Development}},
+  date = {2022},
+  url = {https://data.oecd.org/earnwage/wage-levels.htm#indicator-chart},
+  urldate = {2023-06-07}
 }
 
 @article{robinson1998,
@@ -172,6 +237,21 @@
   pagetotal = {12-33}
 }
 
+@article{rudra2002,
+  title = {Globalization and the {{Decline}} of the {{Welfare State}} in {{Less-Developed Countries}}},
+  author = {Rudra, Nita},
+  date = {2002},
+  journaltitle = {International Organization},
+  volume = {56},
+  number = {2},
+  eprint = {3078610},
+  eprinttype = {jstor},
+  pages = {411--445},
+  publisher = {{[MIT Press, University of Wisconsin Press, Cambridge University Press, International Organization Foundation]}},
+  url = {https://www.jstor.org/stable/3078610},
+  urldate = {2023-06-02}
+}
+
 @online{unitednationsconferenceontradeanddevelopment2022,
   title = {Global Trade Hits Record High of \$28.5 Trillion in 2021, but Likely to Be Subdued in 2022 | {{UNCTAD}}},
   author = {{United Nations Conference on Trade {and} Development}},
@@ -187,6 +267,21 @@
   url = {https://data.un.org/Data.aspx?d=SNAAMA&f=grID%3A101%3BcurrID%3AUSD%3BpcFlag%3A1},
   urldate = {2022-11-14},
   organization = {{data.un.org}}
+}
+
+@article{walter2010,
+  title = {Globalization and the {{Welfare State}}: {{Testing}} the {{Microfoundations}} of the {{Compensation Hypothesis}}},
+  author = {Walter, Stefanie},
+  date = {2010},
+  journaltitle = {International Studies Quarterly},
+  volume = {54},
+  number = {2},
+  eprint = {40664173},
+  eprinttype = {jstor},
+  pages = {403--426},
+  publisher = {{Wiley}},
+  url = {https://www.jstor.org/stable/40664173},
+  urldate = {2023-06-02}
 }
 
 @article{walter2021,
